crates/ty_python_semantic/resources/mdtest/snapshots/classes.md_-_Generic_classes___Leg…_-_Errors_for_inconsist…_(557742f3cd2464b2).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: classes.md - Generic classes: Legacy syntax - Errors for inconsistent type arguments
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/classes.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVar, Generic, Any
 2 | 
 3 | T1 = TypeVar("T1")
 4 | T2 = TypeVar("T2")
 5 | 
 6 | class Grandparent(Generic[T1, T2]): ...
 7 | class Parent(Grandparent[T1, T2]): ...
 8 | 
 9 | # Consistent ordering is fine:
10 | class GoodChild(Parent[T1, T2], Grandparent[T1, T2]): ...
11 | 
12 | # error: [invalid-generic-class] "Inconsistent type arguments: class cannot inherit from both `Grandparent[T2@BadChild, T1@BadChild]` and `Grandparent[T1@BadChild, T2@BadChild]`"
13 | class BadChild(Parent[T1, T2], Grandparent[T2, T1]): ...
14 | 
15 | # The same applies when the explicit base is partially specialized differently:
16 | class Parent2(Grandparent[T1, T2]): ...
17 | 
18 | # error: [invalid-generic-class] "Inconsistent type arguments: class cannot inherit from both `Grandparent[T2@BadChild2, int]` and `Grandparent[T1@BadChild2, T2@BadChild2]`"
19 | class BadChild2(Parent2[T1, T2], Grandparent[T2, int]): ...
20 | 
21 | # The inconsistency can also come through two intermediate classes (diamond):
22 | class Parent3(Grandparent[T1, T2]): ...
23 | class Parent4(Grandparent[T1, T2]): ...
24 | 
25 | # error: [invalid-generic-class] "Inconsistent type arguments: class cannot inherit from both `Grandparent[T2@BadChild3, T1@BadChild3]` and `Grandparent[T1@BadChild3, T2@BadChild3]`"
26 | class BadChild3(Parent3[T1, T2], Parent4[T2, T1]): ...
27 | 
28 | # Implicit specialization is fine:
29 | class Fine(Parent, Grandparent[T1, T2]): ...  # error: [missing-type-argument]
30 | class AlsoFine(Parent3, Parent4[T1, T2]): ...  # error: [missing-type-argument]
31 | 
32 | # error: [missing-type-argument]
33 | # error: [missing-type-argument]
34 | # error: [missing-type-argument]
35 | class Dandy(Parent, Parent3, Parent4): ...
36 | 
37 | # Edge cases: the first class is implicitly specialized
38 | # (or explicitly specialized with `Any`s), but later classes are not:
39 | 
40 | # error: [missing-type-argument]
41 | # error: [invalid-generic-class]
42 | class BadChild4(Parent, Parent3[T1, T2], Parent4[T2, T1]): ...
43 | 
44 | # error: [invalid-generic-class]
45 | class BadChild5(Parent[Any, Any], Parent3[T1, T2], Parent4[T2, T1]): ...
46 | 
47 | # error: [missing-type-argument]
48 | # error: [invalid-generic-class]
49 | class BadChild6(Parent[T1, T2], Parent3, Parent4[T2, T1]): ...
50 | 
51 | # error: [invalid-generic-class]
52 | class BadChild7(Parent[T1, T2], Parent3[Any, Any], Parent4[T2, T1]): ...
53 | 
54 | # error: [missing-type-argument]
55 | # error: [invalid-generic-class]
56 | class BadChild8(Parent[T1, T2], Parent3[T2, T1], Parent4): ...
57 | 
58 | # error: [invalid-generic-class]
59 | class BadChild9(Parent[T1, T2], Parent3[T2, T1], Parent4[Any, Any]): ...
```

# Diagnostics

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:13:7
   |
13 | class BadChild(Parent[T1, T2], Grandparent[T2, T1]): ...
   |       ^^^^^^^^^--------------^^-------------------^
   |                |               |
   |                |               Later class base is `Grandparent[T2@BadChild, T1@BadChild]`
   |                Earlier class base inherits from `Grandparent[T1@BadChild, T2@BadChild]`

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:19:7
   |
19 | class BadChild2(Parent2[T1, T2], Grandparent[T2, int]): ...
   |       ^^^^^^^^^^---------------^^--------------------^
   |                 |                |
   |                 |                Later class base is `Grandparent[T2@BadChild2, int]`
   |                 Earlier class base inherits from `Grandparent[T1@BadChild2, T2@BadChild2]`

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:26:7
   |
26 | class BadChild3(Parent3[T1, T2], Parent4[T2, T1]): ...
   |       ^^^^^^^^^^---------------^^---------------^
   |                 |                |
   |                 |                Later class base inherits from `Grandparent[T2@BadChild3, T1@BadChild3]`
   |                 Earlier class base inherits from `Grandparent[T1@BadChild3, T2@BadChild3]`

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent` (expected 2 type arguments)
  --> src/mdtest_snippet.py:29:12
   |
29 | class Fine(Parent, Grandparent[T1, T2]): ...  # error: [missing-type-argument]
   |            ^^^^^^

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent3` (expected 2 type arguments)
  --> src/mdtest_snippet.py:30:16
   |
30 | class AlsoFine(Parent3, Parent4[T1, T2]): ...  # error: [missing-type-argument]
   |                ^^^^^^^

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent` (expected 2 type arguments)
  --> src/mdtest_snippet.py:35:13
   |
35 | class Dandy(Parent, Parent3, Parent4): ...
   |             ^^^^^^

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent3` (expected 2 type arguments)
  --> src/mdtest_snippet.py:35:21
   |
35 | class Dandy(Parent, Parent3, Parent4): ...
   |                     ^^^^^^^

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent4` (expected 2 type arguments)
  --> src/mdtest_snippet.py:35:30
   |
35 | class Dandy(Parent, Parent3, Parent4): ...
   |                              ^^^^^^^

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:42:7
   |
42 | class BadChild4(Parent, Parent3[T1, T2], Parent4[T2, T1]): ...
   |       ^^^^^^^^^^^^^^^^^^---------------^^---------------^
   |                         |                |
   |                         |                Later class base inherits from `Grandparent[T2@BadChild4, T1@BadChild4]`
   |                         Earlier class base inherits from `Grandparent[T1@BadChild4, T2@BadChild4]`

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent` (expected 2 type arguments)
  --> src/mdtest_snippet.py:42:17
   |
42 | class BadChild4(Parent, Parent3[T1, T2], Parent4[T2, T1]): ...
   |                 ^^^^^^

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:45:7
   |
45 | class BadChild5(Parent[Any, Any], Parent3[T1, T2], Parent4[T2, T1]): ...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------------^^---------------^
   |                                   |                |
   |                                   |                Later class base inherits from `Grandparent[T2@BadChild5, T1@BadChild5]`
   |                                   Earlier class base inherits from `Grandparent[T1@BadChild5, T2@BadChild5]`

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:49:7
   |
49 | class BadChild6(Parent[T1, T2], Parent3, Parent4[T2, T1]): ...
   |       ^^^^^^^^^^--------------^^^^^^^^^^^---------------^
   |                 |                        |
   |                 |                        Later class base inherits from `Grandparent[T2@BadChild6, T1@BadChild6]`
   |                 Earlier class base inherits from `Grandparent[T1@BadChild6, T2@BadChild6]`

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent3` (expected 2 type arguments)
  --> src/mdtest_snippet.py:49:33
   |
49 | class BadChild6(Parent[T1, T2], Parent3, Parent4[T2, T1]): ...
   |                                 ^^^^^^^

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:52:7
   |
52 | class BadChild7(Parent[T1, T2], Parent3[Any, Any], Parent4[T2, T1]): ...
   |       ^^^^^^^^^^--------------^^^^^^^^^^^^^^^^^^^^^---------------^
   |                 |                                  |
   |                 |                                  Later class base inherits from `Grandparent[T2@BadChild7, T1@BadChild7]`
   |                 Earlier class base inherits from `Grandparent[T1@BadChild7, T2@BadChild7]`

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:56:7
   |
56 | class BadChild8(Parent[T1, T2], Parent3[T2, T1], Parent4): ...
   |       ^^^^^^^^^^--------------^^---------------^^^^^^^^^^
   |                 |               |
   |                 |               Later class base inherits from `Grandparent[T2@BadChild8, T1@BadChild8]`
   |                 Earlier class base inherits from `Grandparent[T1@BadChild8, T2@BadChild8]`

```

```
error[missing-type-argument]: Missing type arguments for generic class `Parent4` (expected 2 type arguments)
  --> src/mdtest_snippet.py:56:50
   |
56 | class BadChild8(Parent[T1, T2], Parent3[T2, T1], Parent4): ...
   |                                                  ^^^^^^^

```

```
error[invalid-generic-class]: Inconsistent type arguments for `Grandparent` among class bases
  --> src/mdtest_snippet.py:59:7
   |
59 | class BadChild9(Parent[T1, T2], Parent3[T2, T1], Parent4[Any, Any]): ...
   |       ^^^^^^^^^^--------------^^---------------^^^^^^^^^^^^^^^^^^^^
   |                 |               |
   |                 |               Later class base inherits from `Grandparent[T2@BadChild9, T1@BadChild9]`
   |                 Earlier class base inherits from `Grandparent[T1@BadChild9, T2@BadChild9]`

```
