crates/ty_python_semantic/resources/mdtest/snapshots/classes.md_-_Generic_classes___PEP…_-_Scoping_of_typevars_-_No_forward_reference…_(f4cd31f00230338a).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: classes.md - Generic classes: PEP 695 syntax - Scoping of typevars - No forward references
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/classes.md
---

# Python source files

## mdtest_snippet.py

```
 1 | # error: [invalid-type-variable-bound]
 2 | class C[S: T, T]:
 3 |     pass
 4 | 
 5 | # `S` precedes `T`, so `T`'s bound can name it
 6 | class D[S, T: S]:
 7 |     pass
 8 | 
 9 | # error: [invalid-type-variable-constraints]
10 | class E[S: (int, T), T]:
11 |     pass
12 | 
13 | class F[S: X]:
14 |     pass
15 | 
16 | X = int
17 | # This is fine: U's default references T, which comes before U
18 | class Good[T, U = T]: ...
19 | 
20 | # error: [invalid-generic-class] "Default of `S` cannot reference later type parameter `T`"
21 | class Bad[S = T, T = int]: ...
22 | 
23 | # error: [invalid-generic-class]
24 | class AlsoBad[S = list[T], T = int]: ...
```

# Diagnostics

```
error[invalid-type-variable-bound]: TypeVar upper bound cannot reference later type parameter `T`
 --> src/mdtest_snippet.py:2:12
  |
2 | class C[S: T, T]:
  |            ^

```

```
error[invalid-type-variable-constraints]: TypeVar constraint cannot be generic
  --> src/mdtest_snippet.py:10:18
   |
10 | class E[S: (int, T), T]:
   |                  ^

```

```
error[invalid-generic-class]: Default of `S` cannot reference later type parameter `T`
  --> src/mdtest_snippet.py:21:7
   |
21 | class Bad[S = T, T = int]: ...
   |       ^^^ -----  ------- `T` defined here
   |           |
   |           `S` defined here

```

```
error[invalid-generic-class]: Default of `S` cannot reference later type parameter `T`
  --> src/mdtest_snippet.py:24:7
   |
24 | class AlsoBad[S = list[T], T = int]: ...
   |       ^^^^^^^ -----------  ------- `T` defined here
   |               |
   |               `S` defined here

```
